@@ -1,5 +1,6 @@
 0.3	xx/xx/2009
  + Added auto-complete suggestions for show filters
+ + Formatting on Season and Episode numbers
 
 0.2.3	01/20/2009
  = Fixed bug where properties window would not render
